packages/isar_community_generator/test/errors/index/invalid_name.dart
// names must not be blank or start with "_"

import 'package:isar_community/isar_community.dart';

@collection
class Model {
  Id? id;

  @Index(name: '_index')
  String? str;
}
